Description
ros 0.4.9-RC-35-g3eb03ef
I can make ros assert in WIN32K freetype remotely via webbrowser. This is 100% reporducible for me.
Reproduction steps
-Install ros
-Install Opera 12.18 from rapps
-browse to www.palemoon.org
					*** Assertion failed: style_name
			 | 
		
					***   Source File: ../../win32ss/gdi/ntgdi/freetype.c, line 4031
			 | 
		
It will assert in freetype over and over, I took the bts in react.log![]()
when I finally *t*erminate the thread, ros will BSOD.
I consider this critical, because most likely we do not have much time (before the website changes) and this has dramatic security implications ofc.
Attachments
Issue Links
- relates to
 - 
                    
CORE-15433 BSOD in Opera when open duckduckgo.com
-         
 - Resolved
 
 -