[FREETYPE] Allow a NULL style_name. CORE-14775